Use single variable market

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -75,16 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
-          <app-market-item
-            imageURL="https://www.petful.com/wp-content/uploads/2013/04/160490011_b0cecf8fa1_z.jpg"
-            expireDay="3"
-            marketName="ตลาดอิอิ"
-            [startDate]="dumpCurrentDate"
-            [endDate]="dumpCurrentDate"
-            location="ถนนรัชดาภิเษก กทม."
-            name="ตลาดนัดถนนรัชดาภิเษก"
-            price="1200"
-            ></app-market-item>
+          <app-market-item></app-market-item>
         </div>
       </div>
     </div>
@@ -106,15 +97,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
-          <app-market-item
-            imageURL="https://www.petful.com/wp-content/uploads/2013/04/160490011_b0cecf8fa1_z.jpg"
-            marketName="ตลาดอุอุ"
-            [startDate]="dumpCurrentDate"
-            [endDate]="dumpCurrentDate"
-            location="ถนนรัชดาภิเษก กทม."
-            name="ตลาดนัดถนนรัชดาภิเษก"
-            price="1200"
-            ></app-market-item>
+          <app-market-item></app-market-item>
         </div>
       </div>
     </div>
