Add feed cover image

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -1,4 +1,4 @@
-<section class="search-section mt-3 mb-5 py-4" @searchSectionIn>
+<section class="search-section mb-5 py-4" @searchSectionIn>
   <div class="container">
     <p class="lead-1">ตลาดสุดฮิตมากมาย<wbr> รอให้คุณมาจับจอง</p>
     <p class="lead-2">ค้นหาตลาดง่ายๆ แค่ปลายนิ้ว</p>
