--- a/frontend-webapp/src/app/feed/feed.component.scss
+++ b/frontend-webapp/src/app/feed/feed.component.scss
@@ -4,7 +4,7 @@
   .lead-1 {
     @include font-family(heading);
     @include font-weight(bold);
-    margin: 4rem 0 0.5rem 0;
+    margin: 3rem 0 0.5rem 0;
     font-size: 2rem;
     white-space: nowrap;
     line-height: 2.5rem;
@@ -133,5 +133,17 @@
   }
   > .link-icon {
     margin-top: 2px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .search-section {
+    background-image: url('/assets/images/bg-under-search-section@2x.jpg');
+    background-size: 1183px 497px;
+    background-position: top right;
+    background-repeat: no-repeat;
+    .lead-1 {
+      margin: 6rem 0 0.5rem 0;
+    }
   }
 }
