--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <p class="lead-1">ตลาดสุดฮิตมากมาย<wbr> รอให้คุณมาจับจอง</p>
     <p class="lead-2">ค้นหาตลาดง่ายๆ แค่ปลายนิ้ว</p>
-    <form [formGroup]="searchForm" class="row align-items-end">
+    <form [formGroup]="searchForm" class="row align-items-end" (submit)="search()">
       <div class="col-12 col-lg-5">
         <app-input-group label="ชื่อตลาดหรือสถานที่">
-          <input appInput type="text" class="form-control form-control-lg" placeholder="ชื่อตลาดหรือสถานที่">
+          <input appInput [hideValidation]="true" type="text" formControlName="searchQuery" class="form-control form-control-lg" placeholder="ชื่อตลาดหรือสถานที่">
         </app-input-group>
       </div>
       <div class="col-12 col-lg-4">
