--- a/frontend-webapp/src/app/shared/market/market.component.html
+++ b/frontend-webapp/src/app/shared/market/market.component.html
@@ -2,6 +2,6 @@
   <div *ngIf="market.expireDay" class="expire-note">หมดเขตจองในอีก {{ market.expireDay }} วัน</div>
 </div>
 <p class="location"><app-svg-icon key="location-pin"></app-svg-icon>  {{ market.location }}</p>
-<p class="name">{{ marketName }}</p>
+<p class="name">{{ market.name }}</p>
 <p class="date">วันที่ {{ [market.startDate, market.endDate] | dateRange }}</p>
-<p class="price">เริ่มต้น {{ market.price | currency:'THB' }}฿</p>
+<p class="price">เริ่มต้น {{ market.price | currency:'THB':'฿':'3.0' }}</p>
