--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -1,9 +1,57 @@
 @import '~styles/common';
 
-.navbar {
+.navbar-wrapper {
   box-shadow: 0 0 1rem transparentize($black, 0.85);
+}
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+
+  > .main-nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+
+    > .menu-list {
+      display: none;
+      @include media-breakpoint-up(sm) {
+        display: initial;
+      }
+      ul {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        margin: 0;
+        li {
+          list-style: none;
+          margin-left: 1rem;
+          a {
+            color: $dark-gray;
+          }
+        }
+      }
+      .btn {
+        margin-left: 1rem;
+      }
+    }
+
+    > .hamburger {
+      @include media-breakpoint-up(sm) {
+        display: none;
+      }
+    }
+  }
+
+  > .sub-nav {
+    width: 100%;
+    display: flex;
+  }
 }
 
 a {
   @include font-family(heading);
+  font-size: 0.9rem;
 }
