--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -1,5 +1,9 @@
 @import '~styles/common';
 
+:host {
+  z-index: 1030;
+}
+
 .navbar-wrapper {
   box-shadow: 0 0 1rem transparentize($black, 0.85);
 }
@@ -44,8 +48,6 @@
 
   > .sub-nav {
     width: 100%;
-    height: 40px;
-    display: flex;
   }
 }
 
