Decorate filter bar

--- a/frontend-webapp/src/app/search/search.component.html
+++ b/frontend-webapp/src/app/search/search.component.html
@@ -1,5 +1,18 @@
 <ng-container *appSubNavBar>
-  ช่วงราคา วันจัดตลาด ช่วงเวลาที่ตลาดเปิด
+  <div class="filter-bar">
+    <div class="filter-item">
+      <span>ช่วงราคา</span>
+      <app-svg-icon key="arrow-head-down" width="12"></app-svg-icon>
+    </div>
+    <div class="filter-item">
+      <span>วันจัดตลาด</span>
+      <app-svg-icon key="arrow-head-down" width="12"></app-svg-icon>
+    </div>
+    <div class="filter-item">
+      <span>ช่วงเวลาที่ตลาดเปิด</span>
+      <app-svg-icon key="arrow-head-down" width="12"></app-svg-icon>
+    </div>
+  </div>
 </ng-container>
 
 <div class="container mt-5">
