Add margin-right to app-nav-bar-search-box

--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -21,6 +21,7 @@
     > .logo {
       margin-right: 1rem; 
     }
+
     > .menu-list {
       margin-left: auto;
       ul {
@@ -39,6 +40,10 @@
       .btn {
         margin-left: 1rem;
       }
+    }
+
+    > app-nav-bar-search-box {
+      margin-right: 1rem;
     }
 
     > .hamburger {
