--- a/frontend-webapp/src/app/shared/pagination/pagination.component.scss
+++ b/frontend-webapp/src/app/shared/pagination/pagination.component.scss
@@ -13,7 +13,7 @@
     display: inline-block;
     padding: 0.35rem 0.8rem;
     border-radius: $border-radius;
-    margin: 2px;
+    margin: 0.1rem;
     &:hover {
       background: $light-gray;
     }
