--- a/frontend-webapp/src/app/shared/pagination/pagination.component.scss
+++ b/frontend-webapp/src/app/shared/pagination/pagination.component.scss
@@ -1,7 +1,7 @@
 @import '~styles/common';
 @import '~styles/global';
 
-.wrapper {
+:host {
   display: flex;
   justify-content: center;
   .active {
