--- a/frontend-webapp/src/app/shared/pagination/pagination.component.html
+++ b/frontend-webapp/src/app/shared/pagination/pagination.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="showLeft" class="page-block" [class.active]="min === current">{{ min }}</div>
+<div *ngIf="showLeft" class="btn" [class.active]="min === current">{{ min }}</div>
 <div *ngIf="showDotLeft" class="dot">...</div>
-<div *ngFor="let num of numCenter" class="page-block" [class.active]="num === current">
+<div *ngFor="let num of numCenter" class="btn" [class.active]="num === current">
   {{ num }}
 </div>
 <div *ngIf="showDotRight" class="dot">...</div>
-<div *ngIf="showRight" class="page-block" [class.active]="max === current">{{ max }}</div>
+<div *ngIf="showRight" class="btn" [class.active]="max === current">{{ max }}</div>
