--- a/frontend-webapp/src/app/shared/pagination/pagination.component.scss
+++ b/frontend-webapp/src/app/shared/pagination/pagination.component.scss
@@ -8,24 +8,22 @@
     background: $secondary;
     color: #FFF;
   }
-  .page-block {
+  .btn {
     cursor: pointer;
-    display: inline-block;
-    padding: 0.35rem 0.8rem;
-    border-radius: $border-radius;
-    margin: 0.1rem;
+    width: 2.2rem;
     &:hover {
       background: $light-gray;
     }
   }
-  .active.page-block {
+  .btn.active {
     &:hover {
       background: $secondary;
     }
   }
   .dot {
+    text-align: center;
+    width: 2.2rem;
     @include font-family(light);
-    @extend .page-block;
     &:hover {
       background: none;
     }
