Remove navbar wrapper

--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -1,38 +1,36 @@
-<div class="navbar-wrapper">
-  <div class="container navbar">
-    <div class="main-nav">
-      <a class="logo" routerLink="/">
-        <img class="d-none d-lg-block" src="/assets/icons/whalemart-logo-with-name.svg" height="35">
-        <img class="d-lg-none" src="/assets/icons/whalemart-logo.svg" height="35">
-      </a>
+<nav class="container navbar">
+  <div class="main-nav">
+    <a class="logo" routerLink="/">
+      <img class="d-none d-lg-block" src="/assets/icons/whalemart-logo-with-name.svg" height="35">
+      <img class="d-lg-none" src="/assets/icons/whalemart-logo.svg" height="35">
+    </a>
 
-      <app-nav-bar-search-box *ngIf="isShowNavBarSearchBox()"></app-nav-bar-search-box>
+    <app-nav-bar-search-box *ngIf="isShowNavBarSearchBox()"></app-nav-bar-search-box>
 
-      <a class="hamburger d-md-none btn btn-outline-primary my-2 my-sm-0" routerLink="#">เมนู</a>
-      
-      <div class="menu-list d-none d-md-block" [class.show]="isMenuOpened">
-        <ul class="">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">ลงตลาดให้เช่า</a>
+    <a class="hamburger d-md-none btn btn-outline-primary my-2 my-sm-0" routerLink="#">เมนู</a>
+
+    <div class="menu-list d-none d-md-block" [class.show]="isMenuOpened">
+      <ul class="">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">ลงตลาดให้เช่า</a>
+        </li>
+        <ng-container *ngIf="(userName | async) as name; else loggedIn">
+          <span class="navbar-text">{{ name }}</span>
+          <li class="nav-item">
+            <button class="btn btn-link my-2 my-sm-0" (click)="logout()">ออกจากระบบ</button>
           </li>
-          <ng-container *ngIf="(userName | async) as name; else loggedIn">
-            <span class="navbar-text">{{ name }}</span>
-            <li class="nav-item">
-              <button class="btn btn-link my-2 my-sm-0" (click)="logout()">ออกจากระบบ</button>
-            </li>
-          </ng-container>
-          <ng-template #loggedIn>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="login">เข้าสู่ระบบ</a>
-            </li>
-            <a class="btn btn-outline-primary my-2 my-sm-0" routerLink="register">สมัครสมาชิก</a>
-          </ng-template>
-        </ul>
-      </div>
-    </div>
-
-    <div class="sub-nav">
-      <ng-container [cdkPortalOutlet]="getSubNavBarPortal() | async"></ng-container>
+        </ng-container>
+        <ng-template #loggedIn>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="login">เข้าสู่ระบบ</a>
+          </li>
+          <a class="btn btn-outline-primary my-2 my-sm-0" routerLink="register">สมัครสมาชิก</a>
+        </ng-template>
+      </ul>
     </div>
   </div>
-</div>
+
+  <div class="sub-nav">
+    <ng-container [cdkPortalOutlet]="getSubNavBarPortal() | async"></ng-container>
+  </div>
+</nav>
