--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -14,7 +14,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    height: 60px;
+    height: 3.75rem;
 
     > .logo {
       margin-right: 1rem;
