Fix register forms and API URLs

--- a/frontend-webapp/src/app/register/register.component.html
+++ b/frontend-webapp/src/app/register/register.component.html
@@ -45,7 +45,7 @@
           </app-input-error>
         </app-input-group>
 
-        <button type="submit" class="btn btn-primary btn-lg" [disabled]="registerForm.disabled">สมัครสมาชิก</button>
+        <button type="submit" class="btn btn-lg btn-primary" [disabled]="registerForm.disabled">สมัครสมาชิก</button>
       </form>
     </div>
   </div>
