--- a/frontend-webapp/src/app/login/login.component.html
+++ b/frontend-webapp/src/app/login/login.component.html
@@ -23,7 +23,7 @@
         </app-input-group>
 
         <button class="btn btn-primary btn-lg" type="submit" [disabled]="loginForm.disabled">เข้าสู่ระบบ</button>
-        <button class="btn btn-facebook btn-lg" type="button" (click)="loginWithFacebook()">Login with Facebook</button>
+        <button class="btn btn-facebook btn-lg ml-2" type="button" (click)="loginWithFacebook()">เข้าสู่ระบบด้วยเฟสบุ๊ค</button>
       </form>
     </div>
   </div>
