--- a/frontend-webapp/src/app/register/facebook-register.component.html
+++ b/frontend-webapp/src/app/register/facebook-register.component.html
@@ -53,7 +53,7 @@
           </app-input-error>
         </app-input-group>
 
-        <button type="submit" class="btn btn-primary" [disabled]="isRegistering">สมัครสมาชิก</button>
+        <button type="submit" class="btn btn-lg btn-primary" [disabled]="registerForm.disabled">สมัครสมาชิกด้วยเฟสบุ๊ก</button>
       </form>
     </div>
   </div>
