--- a/frontend-webapp/src/app/register/facebook-register.component.html
+++ b/frontend-webapp/src/app/register/facebook-register.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
       <h1 class="display-4 mt-5">สมัครสมาชิก</h1>
-      <p class="lead">สมัครด้วยเฟสบุ๊ค</p>
+      <p class="lead">สมัครด้วยเฟสบุ๊ก</p>
 
       <div class="fb-card mb-4">
         <div class="d-flex align-items-center">
