Fetch market feed data from server

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -74,8 +74,8 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
-          <app-market-item></app-market-item>
+        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of (marketFeed | async).nights">
+          <app-market-item [market]="market"></app-market-item>
         </div>
       </div>
     </div>
@@ -96,8 +96,8 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
-          <app-market-item></app-market-item>
+        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of (marketFeed | async).days">
+          <app-market-item [market]="market"></app-market-item>
         </div>
       </div>
     </div>
