--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -44,7 +44,7 @@
             <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationContactName"
               placeholder="ชื่อติดต่อในองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationContactName'].hasError('required')">
-              กรุณากรอกชื่อติดต่อในองต์กร
+              กรุณากรอกชื่อติดต่อในองค์กร
             </app-input-error>
           </app-input-group>
 
