--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -33,7 +33,7 @@
           </app-input-group>
 
           <app-input-group label="ชื่อองค์กร">
-            <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationName"
+            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationName"
               placeholder="ชื่อองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationName'].hasError('required')">
               กรุณากรอกชื่อองค์กร
@@ -41,7 +41,7 @@
           </app-input-group>
 
           <app-input-group label="ชื่อติดต่อในองค์กร">
-            <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationContactName"
+            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationContactName"
               placeholder="ชื่อติดต่อในองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationContactName'].hasError('required')">
               กรุณากรอกชื่อติดต่อในองค์กร
@@ -49,7 +49,7 @@
           </app-input-group>
 
           <app-input-group label="อีเมลองค์กร">
-            <input appInput type="email" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationEmail"
+            <input appInput type="email" class="form-control" [disabled]="!isOrganization" formControlName="organizationEmail"
               placeholder="อีเมลองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationEmail'].hasError('required')">
               กรุณากรอกอีเมลในองค์กร
@@ -60,7 +60,7 @@
           </app-input-group>
 
           <app-input-group label="เบอร์โทรศัพท์องค์กร">
-            <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationPhone"
+            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationPhone"
               placeholder="เบอร์โทรศัพท์องค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationPhone'].hasError('required')">
               กรุณากรอกเบอร์โทรศัพท์องค์กร
