Remove duplicate isOrganization

--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -27,7 +27,7 @@
           <app-input-group label="เป็นองค์กรหรือไม่">
             <div appInput class="form-check">
               <label class="form-check-label">
-                <input appInput type="checkbox" [checked]="isOrganization" (change)="toggleIsOrganization()" class="form-check-input" fornControlName="isOrganization"> เป็นองค์กร
+                <input appInput type="checkbox" (change)="toggleIsOrganization()" class="form-check-input" fornControlName="isOrganization"> เป็นองค์กร
               </label>
             </div>
           </app-input-group>
